<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context="com.example.omar.practice_final.MainMenu">

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button12"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="beginLearning"
        android:text="@string/menu1" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button10"
        android:layout_marginBottom="59dp"
        android:text="@string/menu5" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button9"
        android:layout_alignLeft="@+id/button8"
        android:layout_marginBottom="20dp"
        android:onClick="settings"
        android:text="@string/menu4" />

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button10"
        android:layout_alignLeft="@+id/button8"
        android:layout_marginBottom="20dp"
        android:onClick="compare"
        android:text="@string/menu3" />

    <Button
        android:id="@+id/button12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button11"
        android:layout_alignLeft="@+id/button8"
        android:layout_marginBottom="20dp"
        android:onClick="profile"
        android:text="@string/menu2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/main"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/TVusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/emptyString" />
</RelativeLayout>
