<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.omar.practice_final.ActivityList">

    <Button
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/activity1"
        android:id="@+id/htmlButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp"
        android:onClick="onClick" />

    <Button
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/activity2"
        android:id="@+id/cssButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:onClick="onClick"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/activity3"
        android:id="@+id/jsButton"
        android:layout_below="@+id/htmlButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/activity4"
        android:id="@+id/javaButton"
        android:layout_alignTop="@+id/jsButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/activity5"
        android:id="@+id/cppButton"
        android:layout_below="@+id/javaButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/activity6"
        android:id="@+id/pythonButton"
        android:layout_alignTop="@+id/cppButton"
        android:layout_alignLeft="@+id/javaButton"
        android:layout_alignStart="@+id/javaButton"
        android:onClick="onClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityTitle"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:onClick="onClick"/>

</RelativeLayout>
