<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.omar.practice_final.ProfileActivity">

    <TextView android:text="@string/html"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textHTMLProgress"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarHTML"
        android:layout_below="@+id/textHTMLProgress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:progress="50"/>

    <TextView android:text="@string/css"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCSSProgress"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="120dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarCSS"
        android:layout_below="@+id/textCSSProgress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:progress="50"/>

    <TextView android:text="@string/javascript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textJSProgress"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="180dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarJS"
        android:layout_below="@+id/textJSProgress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:progress="50"/>

    <TextView android:text="@string/java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textJavaProgress"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="240dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarJava"
        android:layout_below="@+id/textJavaProgress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:progress="50"/>

    <TextView android:text="@string/cpp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCppProgress"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="300dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarCpp"
        android:layout_below="@+id/textCppProgress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:progress="50"/>

    <TextView android:text="@string/python"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textPythonProgress"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="360dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarPython"
        android:layout_below="@+id/textPythonProgress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:progress="50"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:id="@+id/textUsername"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
